objects/ffr__MassDeleteBatchLog__c.object
<CustomObject>
    <description>Stores standard log information for a mass delete batch process.</description>
    <fields>
        <fullName>ffr__LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__MassDeleteControlRecord__c</fullName>
        <label>MassDeleteControlRecord__c</label>
        <referenceTo>ffr__MassDeleteControlRecord__c</referenceTo>
        <relationshipLabel>Mass Delete Batch Logs</relationshipLabel>
        <relationshipName>MassDeleteControlRecordBatchLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Mass Delete Batch Log</label>
    <nameField>
        <displayFormat>MDBLog{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Delete Batch Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>